# biclustering_algorithms

./: README.md  experiments.ipynb  heterogenous-datasets.ipynb  human_b_exp.ipynb  main.ipynb  main.py  pyproject.toml  scratch_pad.py  yeast_data_exp.ipynb
.ipynb_checkpoints/: experiments-checkpoint.ipynb
ccp/: cca1.py  cca2.py  data_factory.py  validation.py
ccp/strings/: errors.py
data/: .~lock.yeast_matrix.tsv#  benchmark_yeast_data.csv  biclusters_yeast_data.csv  dummy_data.csv  human_b_cells.csv  human_b_cells2.csv  yeast_expression.csv  yeast_matrix.csv
data/G-Datasets/: exp1_numdataset_101_bics.json  exp1_numdataset_101_bics.txt  exp1_numdataset_101_data.tsv  exp2_hetdataset_HL50_101_bics.json  exp2_hetdataset_HL50_101_bics.txt  exp2_hetdataset_HL50_101_data.tsv  exp3_catdataset_101_bics.json  exp3_catdataset_101_bics.txt  exp3_catdataset_101_data.tsv
data/raw/: benchmark_human_b_cells.txt  benchmark_yeast_expression.txt  human_b_cells.txt  human_b_cells2.txt  yeast_expression.txt
data/validation/human_b_cells/: benchmark_100b.csv  benchmark_human_b_cells.csv
debugging/msr-values/: reproduction.csv  reproduction2_yeast_expression.csv  reproduction_human_bcells.csv
debugging/rows&columns/: results-10-bi.txt  results-2.txt  results-3.txt  results-4.txt  results-5.txt  results-6.txt  results.txt
experiments/: exp-1.csv
experiments/cca1/: exp-0.csv  exp-1.csv
experiments/cca2/: exp-10.csv  exp-11.csv
experiments/human-b-cells/cca2/: exp-4.csv  exp-5.csv  (+4 more)
implementation/: bicluster.py  biclustering_.py  cca1.py  cca2.py  data_factory.py
(+39 files in other folders)
