[tool.poetry]
name = "implementation"
version = "0.1.0"
description = ""
authors = ["Ikram Messadi <driver2011@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
